# wbi_ria_yield

./: .gitignore  .gitmodules  00_data-prep.ipynb  00_data-prep.py  01a_run-tsa.ipynb  01a_run-tsa.py  01b_run-tsa.ipynb  01b_run-tsa.py  AGENTS.md  CHANGE_LOG.md  CITATION.cff  README.md  ROADMAP.md  pyproject.toml  requirements.txt  ria_maptiles.csv  tsa08_tipsyauspecs.txt  vdyp_params  vdyp_params-landp
config/: dev.toml  patchworks.runtime.windows.yaml  patchworks.runtime.yaml  run_profile.case_template.yaml  run_profile.example.yaml  run_profile.k3z.yaml  run_profile.tsa29.yaml
docs/: conf.py  index.rst
metadata/: datalad_mirror_seed.csv  required_datasets.yaml
planning/: CFAK3Z_dataset_compile_plan.md  K3Z_dataset_compile_plan.md  TSA29_dataset_compile_plan.md  VDYP_curve_fit_enhancements_2026-03-05.md  VDYP_debug_notes.md  agent-conversation-transcript.txt  femic_instance_rebuild_contract.md  femic_instance_rebuild_contract.v1.yaml  femic_instance_rebuild_spec_schema.v1.yaml  femic_k3z_instance_repo_contract.md  femic_public_data_datalad_bootstrap.md  tsa29-instance-contract.md
reference/: ForestModel_C5_lookup.xml  README.md
scripts/: release_package_checks.sh
tests/: test_account_surface.py  test_bundle.py  test_case_preflight_cli.py  test_cli_main.py  test_diagnostics.py  test_docs_contract.py  test_fmg_adapters.py  test_fmg_patchworks.py  test_fmg_woodstock.py  test_geospatial_preflight.py  test_instance_bootstrap.py  test_instance_context.py  test_legacy_01a_structure.py  test_legacy_context.py  test_legacy_manifest.py  test_legacy_resources.py  (+32 more)
(+248 files in other folders)
