[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femic"
version = "0.1.0"
description = "Forest Estate Model Input Compiler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distance",
    "fiona",
    "geocube",
    "geopandas",
    "ipyparallel",
    "mapply",
    "matplotlib",
    "nbformat",
    "numpy",
    "pandas",
    "pympler",
    "rasterio",
    "scipy",
    "seaborn",
    "swifter",
    "typer>=0.9",
    "rich>=13",
    "PyYAML>=6",
]

[project.scripts]
femic = "femic.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
femic = [
    "resources/instance/.gitignore",
    "resources/instance/*",
    "resources/instance/config/*",
    "resources/instance/config/tipsy/*",
    "resources/legacy/*.py",
]

[tool.ruff]
extend-exclude = ["src/femic/resources/legacy/*.py"]

[tool.mypy]
exclude = ["^src/femic/resources/legacy/.*\\.py$"]
